--- a/SampleSolution.Web/wwwrootsrc/landing/index.html
+++ b/SampleSolution.Web/wwwrootsrc/landing/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <title>Оценка качества - Администрирование</title>
+    <title>Администрирование</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" charset="utf-8" />
 
