--- a/Clients/SampleSolution.Web/wwwrootsrc/landing/index.html
+++ b/Clients/SampleSolution.Web/wwwrootsrc/landing/index.html
@@ -1,22 +1,167 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
 
-    <title>Администрирование</title>
+    <title>CSharp Sample Solution / Home</title>
+
+    <meta name="title" content="CSharp Sample Solution Title">
+    <meta name="description" content="CSharp Sample Solution Description">
+
+    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="shortcut icon" href="/core/content/favicon.ico" type="image/x-icon">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" charset="utf-8" />
-
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="theme-color" content="#425566">
-    <link rel="icon" type="image/png" href="../core/content/images/logoFavIcon.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://qss.labeg.ru/">
+    <meta property="og:title" content="CSharp Sample Solution Title">
+    <meta property="og:description" content="CSharp Sample Solution Description">
+    <meta property="og:image" content="">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://qss.labeg.ru/">
+    <meta property="twitter:title" content="CSharp Sample Solution Title">
+    <meta property="twitter:description" content="CSharp Sample Solution Description">
+    <meta property="twitter:image" content="">
 </head>
+
 <body>
-    <div id="app"></div>
-    <div id="scripts">
-        <script src="../core/scripts/corejs.min.js?v={_date_}"></script>
-        <script src="scripts/main.min.js?v={_date_}"></script>
+    <div>
+        <style>
+            .loader,
+            .loader:before,
+            .loader:after {
+                background: #ccc;
+                -webkit-animation: load1 1s infinite ease-in-out;
+                animation: load1 1s infinite ease-in-out;
+                width: 1em;
+                height: 4em;
+            }
+
+            .loader {
+                color: #ccc;
+                text-indent: -9999em;
+                margin: 88px auto;
+                position: relative;
+                font-size: 11px;
+                -webkit-transform: translateZ(0);
+                -ms-transform: translateZ(0);
+                transform: translateZ(0);
+                -webkit-animation-delay: -0.16s;
+                animation-delay: -0.16s;
+            }
+
+            .loader:before,
+            .loader:after {
+                position: absolute;
+                top: 0;
+                content: '';
+            }
+
+            .loader:before {
+                left: -1.5em;
+                -webkit-animation-delay: -0.32s;
+                animation-delay: -0.32s;
+            }
+
+            .loader:after {
+                left: 1.5em;
+            }
+
+            @-webkit-keyframes load1 {
+
+                0%,
+                80%,
+                100% {
+                    box-shadow: 0 0;
+                    height: 4em;
+                }
+
+                40% {
+                    box-shadow: 0 -2em;
+                    height: 5em;
+                }
+            }
+
+            @keyframes load1 {
+
+                0%,
+                80%,
+                100% {
+                    box-shadow: 0 0;
+                    height: 4em;
+                }
+
+                40% {
+                    box-shadow: 0 -2em;
+                    height: 5em;
+                }
+            }
+        </style>
+        <div class="loader"></div>
     </div>
+    <script async>
+
+        window.onerror = function (errorMsg, source, lineno, colno, error) {
+            document.body.innerHTML = [
+                "<div style='background-color: #f4f0f1; border: 1px solid #e30611; color: #e30611; margin: 10em auto; max-width: 50em; padding: 4em; border-radius: 0.5em; font-family: MTSSans, Arial, sans-serif'>",
+                "<h3>При запуске программы произошла непредвиденная ошибка:</h3>",
+                "<p>",
+                errorMsg,
+                "</p>",
+                "<small>",
+                source + ":" + lineno + ":" + colno,
+                "<br/>",
+                error && error.stack.replace(/\n/g, "<br />"),
+                "</small>",
+                "</div>"
+            ].join("")
+        };
+
+        // 1. Подключаем ServiceWorker, подробнее рассмотрим в блоке PWA
+        if (navigator.serviceWorker && navigator.serviceWorker.getRegistrations && !navigator.serviceWorker.controller) {
+            // navigator.serviceWorker.register('/pwa.serviceworker.min.js', {scope: './'});
+
+            navigator.serviceWorker.getRegistrations().then(function (registrations) {
+                for (var i = 0; i < registrations.length; i++) {
+                    registrations[i].unregister();
+                }
+            });
+        }
+
+        // 2. Подключаем необходимые стили
+        [].forEach(function (url) {
+            var style = document.createElement("link");
+            style.href = url;
+            style.rel = "stylesheet";
+            document.head.appendChild(style);
+        });
+
+        // 3. Подключаем необходимые скрипты
+        var esVersion = ".es2015";
+        try {
+            new Function("(a = 0) => (a,{...{a:0}});const b=1;");
+        } catch (err) {
+            esVersion = ".es5";
+        }
+        [
+            "/core/scripts/polyfills" + esVersion + ".min.js?v={_VERSION_}",
+            "/admin/scripts/main" + esVersion + ".min.js?v={_VERSION_}"
+        ].forEach(function (url) {
+            const script = document.createElement("script");
+            script.src = url;
+            script.async = false;
+            document.head.appendChild(script);
+        });
+
+    </script>
 </body>
+
 </html>
