--- a/Clients/SampleSolution.Web/wwwrootsrc/landing/index.html
+++ b/Clients/SampleSolution.Web/wwwrootsrc/landing/index.html
@@ -10,26 +10,30 @@
     <meta name="description" content="CSharp Sample Solution Description">
 
     <link rel="manifest" href="/manifest.webmanifest">
-    <link rel="shortcut icon" href="/core/content/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/core/content/images/manifest/icons/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/core/content/images/manifest/icons/icon-72x72.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/core/content/images/manifest/icons/icon-72x72.png">
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="theme-color" content="#425566">
+    <meta name="msapplication-TileColor" content="#425566">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://qss.labeg.ru/">
     <meta property="og:title" content="CSharp Sample Solution Title">
     <meta property="og:description" content="CSharp Sample Solution Description">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://qss.labeg.ru/core/content/images/manifest/logos/facebook_cover_photo_1.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://qss.labeg.ru/">
     <meta property="twitter:title" content="CSharp Sample Solution Title">
     <meta property="twitter:description" content="CSharp Sample Solution Description">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="https://qss.labeg.ru/core/content/images/manifest/logos/twitter_header_photo_1.png">
+
 </head>
 
 <body>
