prepare for launch

--- a/Clients/SampleSolution.Web/wwwrootsrc/login/index.html
+++ b/Clients/SampleSolution.Web/wwwrootsrc/login/index.html
@@ -157,7 +157,7 @@
         }
         [
             "/core/scripts/polyfills" + esVersion + ".min.js?v={_VERSION_}",
-            "/admin/scripts/main" + esVersion + ".min.js?v={_VERSION_}"
+            "/login/scripts/main" + esVersion + ".min.js?v={_VERSION_}"
         ].forEach(function (url) {
             const script = document.createElement("script");
             script.src = url;
