begin separation shell and layout

--- a/Clients/SampleSolution.Web/wwwrootsrc/login/index.html
+++ b/Clients/SampleSolution.Web/wwwrootsrc/login/index.html
@@ -37,7 +37,8 @@
 </head>
 
 <body>
-    <div>
+    <div id="app"></div>
+    <div id="init">
         <style>
             .loader,
             .loader:before,
