--- a/Clients/SampleSolution.Web/wwwrootsrc/cabinet/index.html
+++ b/Clients/SampleSolution.Web/wwwrootsrc/cabinet/index.html
@@ -140,18 +140,10 @@
             });
         }
 
-        // 2. Подключаем необходимые стили
-        [].forEach(function (url) {
-            var style = document.createElement("link");
-            style.href = url;
-            style.rel = "stylesheet";
-            document.head.appendChild(style);
-        });
-
-        // 3. Подключаем необходимые скрипты
-        var esVersion = ".es2015";
+        // 2. Подключаем необходимые скрипты
+        var esVersion = ".es2020";
         try {
-            new Function("(a = 0) => (a,{...{a:0}});const b=1;");
+            new Function("document?.body??null,BigInt(0)===0n");
         } catch (err) {
             esVersion = ".es5";
         }
